--- a/index.html
+++ b/index.html
@@ -1,250 +1,305 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Starwol – Taille de Pierre de Tuffeau</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Sculpture sur pierre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-/* ===== PALETTE DE COULEURS (inspirée du style visuel) ===== */
-:root {
-    --bleu-principal: #3B82F6;
-    --sable-clair: #F8F4E3;
-    --vert-kaki: #6B8E23;
-    --noir-profond: #1F1F1F;
-    --orange-accent: #F59E0B;
-    --gris-fonce: #333333;
-    --blanc: #ffffff;
-}
+    <style>
+        :root {
+            --bleu-canard: #1f6f73;
+            --beige-pierre: #e6dccb;
+            --dore-patine: #b59b5a;
+        }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", serif;
+        }
 
-body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background-color: var(--sable-clair);
-    color: var(--gris-fonce);
-}
+        body {
+            min-height: 100vh;
+            background:
+                linear-gradient(
+                    rgba(31, 111, 115, 0.55),
+                    rgba(31, 111, 115, 0.55)
+                ),
+                url("photo-sculpture.jpg");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: var(--beige-pierre);
+        }
 
-/* ===== HEADER ===== */
-header {
-    background: var(--bleu-principal);
-    color: var(--blanc);
-    text-align: center;
-    padding: 80px 20px;
-}
+        header {
+            background: rgba(0, 0, 0, 0.35);
+            padding: 2rem;
+            text-align: center;
+            border-bottom: 2px solid var(--dore-patine);
+        }
 
-header h1 {
-    font-size: 3rem;
-    letter-spacing: 4px;
-    font-weight: bold;
-    margin-bottom: 8px;
-}
+        header h1 {
+            color: var(--beige-pierre);
+            letter-spacing: 2px;
+            font-weight: 300;
+        }
 
-header p {
-    font-size: 1.2rem;
-    font-style: italic;
-}
+        main {
+            max-width: 1000px;
+            margin: 4rem auto;
+            padding: 3rem;
+            background: rgba(230, 220, 203, 0.92);
+            color: #2c2c2c;
+            border-radius: 12px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.35);
+        }
 
-/* ===== NAVIGATION ===== */
-nav {
-    background: var(--noir-profond);
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    padding: 15px 0;
-    font-weight: bold;
-}
+        main h2 {
+            color: var(--bleu-canard);
+            margin-bottom: 1rem;
+        }
 
-nav a {
-    color: var(--blanc);
-    text-decoration: none;
-    font-size: 1rem;
-    transition: 0.3s;
-}
+        main p {
+            line-height: 1.8;
+            margin-bottom: 1.5rem;
+        }
 
-nav a:hover {
-    color: var(--orange-accent);
-}
+        .accent {
+            color: var(--dore-patine);
+            font-weight: 600;
+        }
 
-/* ===== SECTIONS ===== */
-section {
-    padding: 60px 20px;
-    max-width: 1200px;
-    margin: auto;
-}
-
-h2 {
-    text-align: center;
-    margin-bottom: 25px;
-    color: var(--vert-kaki);
-    font-size: 2.4rem;
-}
-
-/* ===== GALERIE & BOUTIQUE ===== */
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    gap: 25px;
-}
-
-.card {
-    background: var(--blanc);
-    border-radius: 15px;
-    box-shadow: 0px 0px 12px rgba(0,0,0,0.15);
-    overflow: hidden;
-    transition: transform 0.3s;
-}
-
-.card:hover {
-    transform: scale(1.03);
-}
-
-.card img {
-    width: 100%;
-}
-
-.card-content {
-    padding: 15px;
-    text-align: center;
-}
-
-.card-content h3 {
-    font-size: 1.4rem;
-    margin-bottom: 6px;
-    color: var(--bleu-principal);
-}
-
-.card-content p {
-    font-size: 1.1rem;
-    color: var(--gris-fonce);
-}
-
-.price {
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-top: 10px;
-    color: var(--orange-accent);
-}
-
-/* ===== FORMULAIRE ===== */
-form {
-    background: var(--blanc);
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
-}
-
-input, textarea {
-    width: 100%;
-    margin-top: 10px;
-    padding: 12px;
-    border-radius: 8px;
-    border: 1px solid var(--gris-fonce);
-}
-
-button {
-    margin-top: 18px;
-    width: 100%;
-    padding: 14px;
-    border: none;
-    background: var(--bleu-principal);
-    color: var(--blanc);
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: 0.3s;
-}
-
-button:hover {
-    background: var(--orange-accent);
-}
-
-/* ===== FOOTER ===== */
-footer {
-    text-align: center;
-    padding: 25px;
-    background: var(--noir-profond);
-    color: var(--blanc);
-}
-</style>
+        footer {
+            text-align: center;
+            padding: 2rem;
+            color: var(--beige-pierre);
+            font-size: 0.9rem;
+            background: rgba(0, 0, 0, 0.4);
+            border-top: 1px solid var(--dore-patine);
+        }
+    </style>
 </head>
 
 <body>
 
-<header>
-    <h1>Starwol</h1>
-    <p>L’art de redonner vie avec la sculpture de pierre de tuffeau </p>
-</header>
+    <header>
+        <h1>Sculpture & Taille de Pierre</h1>
+    </header>
 
-<nav>
-    <a href="#gallery">Galerie & Boutique</a>
-    <a href="#about">Biographie</a>
-    <a href="#contact">Contact</a>
-    <a href="#follow">Suivi Commande</a>
-</nav>
+    <main>
+        <h2>Un savoir-faire intemporel</h2>
+        <p>
+            La sculpture sur pierre est un art où la matière dialogue avec la main.
+            Chaque outil, chaque frappe révèle une histoire gravée dans la pierre.
+            <!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Sculpture sur pierre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<section id="gallery">
-    <h2>Galerie & Boutique</h2>
-    <div class="gallery">
-        <div class="card">
-            <img src="tuffeau1.jpg" alt="Pièce Sculptée A">
-            <div class="card-content">
-                <h3>Pièce Sculptée A</h3>
-                <p>Pierre de tuffeau façonnée à la main</p>
-                <div class="price">€150</div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="tuffeau2.jpg" alt="Pièce Sculptée B">
-            <div class="card-content">
-                <h3>Pièce Sculptée B</h3>
-                <p>Ouvrage décoratif pour architecture</p>
-                <div class="price">€280</div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="tuffeau3.jpg" alt="Pièce Sculptée C">
-            <div class="card-content">
-                <h3>Pièce Sculptée C</h3>
-                <p>Design naturel et authentique</p>
-                <div class="price">€200</div>
-            </div>
-        </div>
-    </div>
-</section>
+    <style>
+        :root {
+            --bleu-canard: #1f6f73;
+            --beige-pierre: #e6dccb;
+            --dore-patine: #b59b5a;
+        }
 
-<section id="about">
-    <h2>Biographie de l'entreprise</h2>
-    <p>
-        Starwol est une entreprise artisanale spécialisée dans la sculpture de pierre de tuffeau, un
-        matériau noble & emblématique du patrimoine. Ma mission redonner vie à cette pierre en créant des pièces uniques qui racontent une histoire — entre tradition et modernité,
-        chaque création incarne l'élégance, la finesse et beauté brute de cette pierre aujourd'hui laisse trop souvent de côté.
-    </p>
-</section>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", serif;
+        }
 
-<section id="contact">
-    <h2>Contactez-nous</h2>
-    <form>
-        <label for="name">Nom complet</label>
-        <input type="text" id="name" required>
+        body {
+            min-height: 100vh;
+            background:
+                linear-gradient(
+                    rgba(31, 111, 115, 0.55),
+                    rgba(31, 111, 115, 0.55)
+                ),
+                url("photo-sculpture.jpg");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: var(--beige-pierre);
+        }
 
-        <label for="email">Email</label>
-        <input type="email" id="email" required>
+        header {
+            background: rgba(0, 0, 0, 0.35);
+            padding: 2rem;
+            text-align: center;
+            border-bottom: 2px solid var(--dore-patine);
+        }
 
-        <label for="message">Votre message</label>
-        <textarea id="message" rows="4" required></textarea>
+        header h1 {
+            color: var(--beige-pierre);
+            letter-spacing: 2px;
+            font-weight: 300;
+        }
 
-        <button type="submit">Envoyer</button>
-    </form>
-</section>
+        main {
+            max-width: 1000px;
+            margin: 4rem auto;
+            padding: 3rem;
+            background: rgba(230, 220, 203, 0.92);
+            color: #2c2c2c;
+            border-radius: 12px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.35);
+        }
 
-<footer>
-    <p>© 2026 Starwol. Tous droits réservés.</p>
-</footer>
+        main h2 {
+            color: var(--bleu-canard);
+            margin-bottom: 1rem;
+        }
+
+        main p {
+            line-height: 1.8;
+            margin-bottom: 1.5rem;
+        }
+
+        .accent {
+            color: var(--dore-patine);
+            font-weight: 600;
+        }
+
+        footer {
+            text-align: center;
+            padding: 2rem;
+            color: var(--beige-pierre);
+            font-size: 0.9rem;
+            background: rgba(0, 0, 0, 0.4);
+            border-top: 1px solid var(--dore-patine);
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>Sculpture & Taille de Pierre</h1>
+    </header>
+
+    <main>
+        <h2>Un savoir-faire intemporel</h2>
+        <p>
+            La sculpture sur pierre est un art où la matière dialogue avec la main.
+            Chaque outil, chaque frappe révèle une histoire gravée dans la pierre.
+            <!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Sculpture sur pierre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        :root {
+            --bleu-canard: #1f6f73;
+            --beige-pierre: #e6dccb;
+            --dore-patine: #b59b5a;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", serif;
+        }
+
+        body {
+            min-height: 100vh;
+            background:
+                linear-gradient(
+                    rgba(31, 111, 115, 0.55),
+                    rgba(31, 111, 115, 0.55)
+                ),
+                url("photo-sculpture.jpg");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: var(--beige-pierre);
+        }
+
+        header {
+            background: rgba(0, 0, 0, 0.35);
+            padding: 2rem;
+            text-align: center;
+            border-bottom: 2px solid var(--dore-patine);
+        }
+
+        header h1 {
+            color: var(--beige-pierre);
+            letter-spacing: 2px;
+            font-weight: 300;
+        }
+
+        main {
+            max-width: 1000px;
+            margin: 4rem auto;
+            padding: 3rem;
+            background: rgba(230, 220, 203, 0.92);
+            color: #2c2c2c;
+            border-radius: 12px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.35);
+        }
+
+        main h2 {
+            color: var(--bleu-canard);
+            margin-bottom: 1rem;
+        }
+
+        main p {
+            line-height: 1.8;
+            margin-bottom: 1.5rem;
+        }
+
+        .accent {
+            color: var(--dore-patine);
+            font-weight: 600;
+        }
+
+        footer {
+            text-align: center;
+            padding: 2rem;
+            color: var(--beige-pierre);
+            font-size: 0.9rem;
+            background: rgba(0, 0, 0, 0.4);
+            border-top: 1px solid var(--dore-patine);
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>Sculpture & Taille de Pierre</h1>
+    </header>
+
+    <main>
+        <h2>Un savoir-faire intemporel</h2>
+        <p>
+            La sculpture sur pierre est un art où la matière dialogue avec la main.
+            Chaque outil, chaque frappe révèle une histoire gravée dans la pierre.
+            Starwol est une entreprise artisanale spécialisée dans la sculpture de pierre de tuffeau, un
+        matériau noble & emblématique du patrimoine.
+        Ma mission, redonner vie à ces pierres en créant des pièces uniques qui rappellent un grain histoire.
+        — Entre tradition et modernité, chaque création incarne L'ÉLÉGANCE, LA RICHESSE et LA FORCE brute de cette pierre façonner par la terre avant nous,
+        qui aujourd'hui est ENCORE BIEN TROP SOUVENT laisser pour compte.
+        Je récupère donc des chutes de pierre de taille de dimensions différentes que je transforme par la suite au gré de mon imagination et de mon savoir-faire, pour mon plus grand plaisir et également dû vôtre.
+            
+        </p>
+        <p>
+            Inspiré par le <span class="accent">tuffeau</span>, la lumière et le geste,
+            ce site met en valeur la noblesse du travail artisanal.
+        </p>
+    </main>
+
+    <footer>
+        © 2026 – Artisanat & Sculpture sur pierre
+    </footer>
 
 </body>
 </html>
