--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
 
         header {
-            background: rgba(0, 0, 0, 0.35);
-            padding: 2rem;
+            background: rgba(0, 0, 0, 0.4);
+            padding: 3rem 2rem;
             text-align: center;
             border-bottom: 2px solid var(--dore-patine);
         }
@@ -50,7 +50,7 @@
             max-width: 1000px;
             margin: 4rem auto;
             padding: 3rem;
-            background: rgba(230, 220, 203, 0.92);
+            background: rgba(230, 220, 203, 0.95);
             color: #2c2c2c;
             border-radius: 12px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.35);
@@ -58,7 +58,7 @@
 
         main h2 {
             color: var(--bleu-canard);
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
 
         main p {
@@ -90,210 +90,29 @@
 
     <main>
         <h2>Un savoir-faire intemporel</h2>
+
         <p>
             La sculpture sur pierre est un art où la matière dialogue avec la main.
             Chaque outil, chaque frappe révèle une histoire gravée dans la pierre.
-            <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Sculpture sur pierre</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        :root {
-            --bleu-canard: #1f6f73;
-            --beige-pierre: #e6dccb;
-            --dore-patine: #b59b5a;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Segoe UI", serif;
-        }
-
-        body {
-            min-height: 100vh;
-            background:
-                linear-gradient(
-                    rgba(31, 111, 115, 0.55),
-                    rgba(31, 111, 115, 0.55)
-                ),
-                url("photo-sculpture.jpg");
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: var(--beige-pierre);
-        }
-
-        header {
-            background: rgba(0, 0, 0, 0.35);
-            padding: 2rem;
-            text-align: center;
-            border-bottom: 2px solid var(--dore-patine);
-        }
-
-        header h1 {
-            color: var(--beige-pierre);
-            letter-spacing: 2px;
-            font-weight: 300;
-        }
-
-        main {
-            max-width: 1000px;
-            margin: 4rem auto;
-            padding: 3rem;
-            background: rgba(230, 220, 203, 0.92);
-            color: #2c2c2c;
-            border-radius: 12px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.35);
-        }
-
-        main h2 {
-            color: var(--bleu-canard);
-            margin-bottom: 1rem;
-        }
-
-        main p {
-            line-height: 1.8;
-            margin-bottom: 1.5rem;
-        }
-
-        .accent {
-            color: var(--dore-patine);
-            font-weight: 600;
-        }
-
-        footer {
-            text-align: center;
-            padding: 2rem;
-            color: var(--beige-pierre);
-            font-size: 0.9rem;
-            background: rgba(0, 0, 0, 0.4);
-            border-top: 1px solid var(--dore-patine);
-        }
-    </style>
-</head>
-
-<body>
-
-    <header>
-        <h1>Sculpture & Taille de Pierre</h1>
-    </header>
-
-    <main>
-        <h2>Un savoir-faire intemporel</h2>
-        <p>
-            La sculpture sur pierre est un art où la matière dialogue avec la main.
-            Chaque outil, chaque frappe révèle une histoire gravée dans la pierre.
-            <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Sculpture sur pierre</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        :root {
-            --bleu-canard: #1f6f73;
-            --beige-pierre: #e6dccb;
-            --dore-patine: #b59b5a;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Segoe UI", serif;
-        }
-
-        body {
-            min-height: 100vh;
-            background:
-                linear-gradient(
-                    rgba(31, 111, 115, 0.55),
-                    rgba(31, 111, 115, 0.55)
-                ),
-                url("photo-sculpture.jpg");
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: var(--beige-pierre);
-        }
-
-        header {
-            background: rgba(0, 0, 0, 0.35);
-            padding: 2rem;
-            text-align: center;
-            border-bottom: 2px solid var(--dore-patine);
-        }
-
-        header h1 {
-            color: var(--beige-pierre);
-            letter-spacing: 2px;
-            font-weight: 300;
-        }
-
-        main {
-            max-width: 1000px;
-            margin: 4rem auto;
-            padding: 3rem;
-            background: rgba(230, 220, 203, 0.92);
-            color: #2c2c2c;
-            border-radius: 12px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.35);
-        }
-
-        main h2 {
-            color: var(--bleu-canard);
-            margin-bottom: 1rem;
-        }
-
-        main p {
-            line-height: 1.8;
-            margin-bottom: 1.5rem;
-        }
-
-        .accent {
-            color: var(--dore-patine);
-            font-weight: 600;
-        }
-
-        footer {
-            text-align: center;
-            padding: 2rem;
-            color: var(--beige-pierre);
-            font-size: 0.9rem;
-            background: rgba(0, 0, 0, 0.4);
-            border-top: 1px solid var(--dore-patine);
-        }
-    </style>
-</head>
-
-<body>
-
-    <header>
-        <h1>Sculpture & Taille de Pierre</h1>
-    </header>
-
-    <main>
-        <h2>Un savoir-faire intemporel</h2>
-        <p>
-            La sculpture sur pierre est un art où la matière dialogue avec la main.
-            Chaque outil, chaque frappe révèle une histoire gravée dans la pierre.
-            Starwol est une entreprise artisanale spécialisée dans la sculpture de pierre de tuffeau, un
-        matériau noble & emblématique du patrimoine.
-        Ma mission, redonner vie à ces pierres en créant des pièces uniques qui rappellent un grain histoire.
-        — Entre tradition et modernité, chaque création incarne L'ÉLÉGANCE, LA RICHESSE et LA FORCE brute de cette pierre façonner par la terre avant nous,
-        qui aujourd'hui est ENCORE BIEN TROP SOUVENT laisser pour compte.
-        Je récupère donc des chutes de pierre de taille de dimensions différentes que je transforme par la suite au gré de mon imagination et de mon savoir-faire, pour mon plus grand plaisir et également dû vôtre.
-            
         </p>
+
         <p>
-            Inspiré par le <span class="accent">tuffeau</span>, la lumière et le geste,
-            ce site met en valeur la noblesse du travail artisanal.
+            <strong>Starwol</strong> est une entreprise artisanale spécialisée dans la sculpture
+            de pierre de <span class="accent">tuffeau</span>, matériau noble et emblématique
+            du patrimoine.
+        </p>
+
+        <p>
+            Ma mission : redonner vie à ces pierres en créant des pièces uniques,
+            entre tradition et modernité, où s’expriment l’élégance,
+            la richesse et la force brute d’une matière façonnée par la terre avant nous
+            et aujourd’hui trop souvent laissée pour compte.
+        </p>
+
+        <p>
+            Je récupère des chutes de pierre de taille de dimensions variées
+            que je transforme selon mon imagination et mon savoir-faire,
+            pour mon plus grand plaisir… et le vôtre.
         </p>
     </main>
 
