--- a/index.html
+++ b/index.html
@@ -33,9 +33,29 @@
             color: var(--beige-pierre);
         }
 
+        /* ===== HERO ===== */
+        .hero {
+            height: 60vh;
+            background: url("photo-sculpture.jpg") center / cover no-repeat;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-bottom: 2px solid var(--dore-patine);
+        }
+
+        .hero h1 {
+            background: rgba(0,0,0,0.5);
+            padding: 1.5rem 3rem;
+            color: var(--beige-pierre);
+            letter-spacing: 3px;
+            font-weight: 300;
+            text-align: center;
+        }
+
+        /* ===== HEADER ===== */
         header {
             background: rgba(0, 0, 0, 0.4);
-            padding: 3rem 2rem;
+            padding: 2rem;
             text-align: center;
             border-bottom: 2px solid var(--dore-patine);
         }
@@ -46,7 +66,9 @@
             font-weight: 300;
         }
 
-        main {
+        /* ===== SECTIONS ===== */
+        main,
+        .section {
             max-width: 1000px;
             margin: 4rem auto;
             padding: 3rem;
@@ -56,12 +78,12 @@
             box-shadow: 0 20px 40px rgba(0,0,0,0.35);
         }
 
-        main h2 {
+        h2 {
             color: var(--bleu-canard);
             margin-bottom: 1.5rem;
         }
 
-        main p {
+        p {
             line-height: 1.8;
             margin-bottom: 1.5rem;
         }
@@ -71,6 +93,51 @@
             font-weight: 600;
         }
 
+        /* ===== VENTE & GALERIE ===== */
+        .vente,
+        .galerie {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 2rem;
+        }
+
+        .carte {
+            background: #fff;
+            border: 1px solid var(--dore-patine);
+            padding: 1.5rem;
+            text-align: center;
+        }
+
+        .carte img,
+        .galerie img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            margin-bottom: 1rem;
+        }
+
+        /* ===== FORMULAIRE ===== */
+        form {
+            display: grid;
+            gap: 1rem;
+        }
+
+        input,
+        textarea,
+        button {
+            padding: 0.8rem;
+            border: 1px solid var(--bleu-canard);
+            font-size: 1rem;
+        }
+
+        button {
+            background: var(--bleu-canard);
+            color: var(--beige-pierre);
+            border: none;
+            cursor: pointer;
+        }
+
+        /* ===== FOOTER ===== */
         footer {
             text-align: center;
             padding: 2rem;
@@ -84,10 +151,17 @@
 
 <body>
 
-    <header>
+    <!-- IMAGE DE TÊTE -->
+    <div class="hero">
         <h1>Sculpture & Taille de Pierre</h1>
+    </div>
+
+    <!-- HEADER -->
+    <header>
+        <h1>Starwol – Artisan Sculpteur</h1>
     </header>
 
+    <!-- PRÉSENTATION -->
     <main>
         <h2>Un savoir-faire intemporel</h2>
 
@@ -98,15 +172,15 @@
 
         <p>
             <strong>Starwol</strong> est une entreprise artisanale spécialisée dans la sculpture
-            de pierre de <span class="accent">tuffeau</span>, matériau noble et emblématique
+            de pierre de <span class="accent">Tuffeau</span>, matériau noble et emblématique
             du patrimoine.
         </p>
 
         <p>
-            Ma mission : redonner vie à ces pierres en créant des pièces uniques,
-            entre tradition et modernité, où s’expriment l’élégance,
-            la richesse et la force brute d’une matière façonnée par la terre avant nous
-            et aujourd’hui trop souvent laissée pour compte.
+            Ma mission est de redonner vie à ces pierres en créant des pièces uniques,
+            entre tradition et modernité, faisant ressortir l’élégance,
+            la richesse et la force brute de cette matière façonnée par la terre avant nous,
+            aujourd’hui bien trop souvent mise de côté.
         </p>
 
         <p>
@@ -116,9 +190,50 @@
         </p>
     </main>
 
+    <!-- ESPACE VENTE -->
+    <section class="section">
+        <h2>Pièces disponibles à la vente</h2>
+
+        <div class="vente">
+            <div class="carte">
+                <img src="vente1.jpg" alt="Pierre sculptée">
+                <p>Pièce unique en Tuffeau</p>
+            </div>
+
+            <div class="carte">
+                <img src="vente2.jpg" alt="Pierre sculptée">
+                <p>Création artisanale</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- GALERIE -->
+    <section class="section">
+        <h2>Galerie</h2>
+
+        <div class="galerie">
+            <img src="galerie1.jpg" alt="Sculpture">
+            <img src="galerie2.jpg" alt="Atelier">
+            <img src="galerie3.jpg" alt="Détail pierre">
+        </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="section">
+        <h2>Contact & commandes</h2>
+
+        <form>
+            <input type="text" placeholder="Nom">
+            <input type="email" placeholder="Email">
+            <textarea rows="5" placeholder="Votre message"></textarea>
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
+
+    <!-- FOOTER -->
     <footer>
         © 2026 – Artisanat & Sculpture sur pierre
     </footer>
 
 </body>
-</html>
+    </html>
