--- a/index.html
+++ b/index.html
@@ -172,19 +172,19 @@
 
         <p>
             <strong>Starwol</strong> est une entreprise artisanale spécialisée dans la sculpture
-            de pierre de <span class="accent">Tuffeau</span>, matériau noble et emblématique
+            de pierre de <span class="accent">Tuffeau</span>, matériau NOBLE et EMBLÉMATIQUE
             du patrimoine.
         </p>
 
         <p>
-            Ma mission est de redonner vie à ces pierres en créant des pièces uniques,
-            entre tradition et modernité, faisant ressortir l’élégance,
-            la richesse et la force brute de cette matière façonnée par la terre avant nous,
+            Ma mission est de redonner vie à ces pierres en créant des pièces uniques.
+            Entre tradition et modernité, dans chaque pièce que je crée, je fais en sorte de faire ressortir L’ÉLÉGANCE,
+            LA RICHESSE et LA FORCE brute de cette matière façonnée par la terre avant nous,
             aujourd’hui bien trop souvent mise de côté.
         </p>
 
         <p>
-            Je récupère des chutes de pierre de taille de dimensions variées
+            Je récupère donc des chutes de pierre de taille de dimensions variées
             que je transforme selon mon imagination et mon savoir-faire,
             pour mon plus grand plaisir… et le vôtre.
         </p>
