--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         /* ===== HERO ===== */
         .hero {
             height: 60vh;
-            background: url("photo-sculpture.jpg") center / cover no-repeat;
+            background: url("image-outils-de-taille-de-pierre.jpg") center / cover no-repeat;
             display: flex;
             align-items: center;
             justify-content: center;
