--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     rgba(31, 111, 115, 0.55),
                     rgba(31, 111, 115, 0.55)
                 ),
-                url("photo-sculpture.jpg");
+                url("image outils de taille de pierre.jpg");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -151,11 +151,6 @@
 
 <body>
 
-    <!-- IMAGE DE TÊTE -->
-    <div class="hero">
-        <h1>Sculpture & Taille de Pierre</h1>
-    </div>
-
     <!-- HEADER -->
     <header>
         <h1>Starwol – Artisan Sculpteur</h1>
@@ -177,7 +172,7 @@
         </p>
 
         <p>
-            Ma mission est de redonner vie à ces pierres en créant des pièces uniques.
+            Ma mission: redonner vie à ces pierres en créant des pièces uniques.
             Entre tradition et modernité, dans chaque pièce que je crée, je fais en sorte de faire ressortir L’ÉLÉGANCE,
             LA RICHESSE et LA FORCE brute de cette matière façonnée par la terre avant nous,
             aujourd’hui bien trop souvent mise de côté.
