--- a/index.html
+++ b/index.html
@@ -208,8 +208,15 @@
 
         <div class="galerie">
             <img src="galerie1.jpg" alt="Sculpture">
-            <img src="galerie2.jpg" alt="Atelier">
+            <img src="galerie2.jpg" alt="Sculpture">
             <img src="galerie3.jpg" alt="Détail pierre">
+            <img src="galerie4.jpg" alt="Détail pierre">
+            <img src="galerie5.jpg" alt="Détail pierre">
+            <img src="galerie6.jpg" alt="Détail pierre">
+            <img src="galerie7.jpg" alt="Détail pierre">
+            <img src="galerie8.jpg" alt="Détail pierre">
+            <img src="galerie9.jpg" alt="Détail pierre">
+            <img src="galerie10.jpg" alt="Détail pierre">
         </div>
     </section>
 
